# wasm-doom

./: .gitignore  CMakeLists.txt  build.sh
react-wasm/: package.json
react-wasm/public/: react-wasm.wasm  wasm-doom.wasm
react-wasm/src/: App.tsx
react-wasm/src/lib/: doom-wrapper.ts
react-wasm/src/wasm/: react-wasm.js  react-wasm.js.old  wasm-doom.js  wasm-doom.js.old
src/: main.c  pre.js
src/DOOM/linuxdoom-1.10/: am_map.c  d_event.h  d_main.c  debug.c  doomdef.h  g_game.c  i_net.c  i_video.c  m_menu.h  m_misc.c  m_misc.h  r_data.c  w_wad.c
